# qhist-queries

./: .gitignore  Makefile  README.md  conda-env.yaml  pyproject.toml  requirements.txt
.github/workflows/: qhist_db-ci.yaml
docs/: REFACTOR_CLI_PLAN.md  REFACTOR_CLI_PROGRESS.txt  SIMPLIFY_CLI.md  charging-views-plan.md  refactoring-plan.md  schema.md
plots/: .gitignore  derecho.yaml  gen_all.sh  ncar_branding.py  plot_usage_history.ipynb
prompts/: 01-planning.txt  03-CLI-tool.txt  04-memory-report.txt
qhist_db/: __init__.py  charging.py  cli.py  database.py  exporters.py  logging.py  models.py  parsers.py  queries.py  query_builders.py  remote.py  summary.py  sync.py
scripts/: sync_jobs.py
tests/: __init__.py  conftest.py  test_charging.py  test_models.py  test_parsers.py  test_queries.py  test_query_builders.py  test_summary.py
