[project]
name = "qhist-db"
version = "0.1.0"
description = "SQLite database toolkit for NCAR HPC job history"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
qhist-sync = "scripts.sync_jobs:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qhist_db*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
